--- a/Python端/code/resources/config.ini
+++ b/Python端/code/resources/config.ini
@@ -1,4 +1,4 @@
 [DEFAULT]
-baseurl = http://localhost:8080/crm
+baseurl = http://localhost:81
 endpoint = /workbench/Report/get_python_message.do
-port = 5555
+port = 55556
