--- a/ris/code/ris_SpringBoot/pom.xml
+++ b/ris/code/ris_SpringBoot/pom.xml
@@ -24,6 +24,13 @@
     </repositories>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.json</artifactId>
+            <version>1.1.6</version>
+            <scope>provided</scope>
+        </dependency>
         <!--下面两个是解析hl7的工具-->
         <dependency>
             <groupId>ca.uhn.hapi</groupId>
